--- a/css/booking.css
+++ b/css/booking.css
@@ -40,11 +40,24 @@ body {
     background-image: url("/images/bg1.jpg");
   }
 }
-
+.packages {
+  background-color: aliceblue;
+  display: flex;
+  justify-content: center;
+}
+.wild-tours {
+  display: flex;
+}
 .pack1,
 .pack2,
 .pack3 {
-  width: 25%;
+  width: 30%;
+  background-color: white;
+  padding: 10px;
+  margin: 3px;
+}
+h1 {
+  background-color: rgb(145, 100, 34);
 }
 .pack1 img {
   max-width: 100%;
