--- a/css/booking.css
+++ b/css/booking.css
@@ -3,6 +3,7 @@ body {
   padding: 0;
   height: 100%;
   width: 100%;
+  overflow-x: hidden;
 }
 .container {
   height: 100vh;
@@ -11,16 +12,16 @@ body {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  transition: 5s;
+  /* transition: 5s;
   animation-name: animate;
   animation-direction: alternate-reverse;
   animation-duration: 30s;
   animation-fill-mode: forwards;
   animation-iteration-count: infinite;
   animation-play-state: running;
-  animation-timing-function: ease-in-out;
+  animation-timing-function: ease-in-out; */
 }
-@keyframes animate {
+/* @keyframes animate {
   0% {
     background-image: url("/images/bg2.jpg");
   }
@@ -39,7 +40,7 @@ body {
   100% {
     background-image: url("/images/bg1.jpg");
   }
-}
+} */
 .packages {
   background-color: aliceblue;
 }
@@ -198,4 +199,17 @@ input {
   flex-direction: column;
   width: 45%;
   padding: 5px;
+}
+/* modalBox */
+.modalBox {
+  /* display: none; */
+  background-color: rgba(255, 255, 255, 0.8);
+  position: fixed;
+  z-index: 1;
+  /* padding-top: 100px; */
+  /* width: 100%; */
+
+  left: 20%;
+  right: 0%;
+  top: 0;
 }
