--- a/css/booking.css
+++ b/css/booking.css
@@ -204,11 +204,8 @@ input {
 .modalBox {
   /* display: none; */
   background-color: rgba(255, 255, 255, 0.8);
-  position: fixed;
+  /* position: fixed; */
   z-index: 1;
-  /* padding-top: 100px; */
-  /* width: 100%; */
-
   left: 20%;
   right: 0%;
   top: 0;
